--- a/product.yml
+++ b/product.yml
@@ -14,7 +14,7 @@ spec:
       nodeSelector:
         kubernetes.io/os: linux
       containers:
-        - image: [replace with your ACR name].azurecr.io/productservice:latest
+        - image: acseshop2754981779.azurecr.io/productservice:latest
           name: productservice
           resources:
             requests:
